# Online_Auction_System

./: README.md  online_auction_28_1.sql
Database/: Database_demo.sql  Online_Auction_System_4_2.sql  online_auction_11_1_2022.sql
Database/SocketClientTest/SocketServer/: pom.xml
SocketClientTest/: pom.xml
SocketClientTest/SocketClient/: pom.xml
SocketClientTest/SocketClient/src/main/java/: module-info.java
SocketClientTest/src/main/java/: module-info.java
SocketClientTest/src/main/java/org/socket/server/: PrimaryController.java  SecondaryController.java
SocketClientTest/src/main/resources/org/socket/server/: primary.fxml  secondary.fxml
SocketClientUI/: pom.xml
SocketClientUI/src/main/java/: module-info.java
SocketClientUI/src/main/java/Controller/: HistoryController.java  HomeController.java  LoginController.java  LotController.java  LotDetailController.java  RegisterController.java  SellController.java  TestHomeController.java
SocketClientUI/src/main/java/Main/: App.java  Client.java  Lot.java  MyListener.java  PrimaryController.java  SecondaryController.java
SocketClientUI/src/main/java/Model/: Bid.java  Client.java  DataModel.java  ImageLot.java  Lot.java
SocketClientUI/src/main/resources/Main/: historypage.fxml  homepage.fxml  login.fxml  lot.fxml  register.fxml  secondary.fxml  sellpage.fxml  style.css
SocketServer/: CMakeLists.txt
SocketServer/include/: handle_client.h  handle_database.h  handle_message.h
SocketServer/src/: handle_client.c  handle_database.c  handle_message.c  main.c
(+5 files in other folders)
